force-app/main/default/objects/Bus_Booking__c/Bus_Booking__c.object-meta.xml
<CustomObject>
    <label>Bus Booking</label>
    <nameField>
        <displayFormat>BOOK-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>