force-app/main/default/objects/Bus_Booking__c/fields/Booking_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>Booking Reference Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>