force-app/main/default/objects/Bus_Booking__c/fields/Bus_Trip__c.field-meta.xml
<CustomField>
    <fullName>Bus_Trip__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bus Trip</label>
    <referenceTo>Bus_Trip__c</referenceTo>
    <relationshipLabel>Bus Bookings</relationshipLabel>
    <relationshipName>Bus_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>