force-app/main/default/objects/Bus_Booking__c/fields/Passenger_Count__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Count__c</fullName>
    <label>Passenger Count</label>
    <summaryForeignKey>Booking_Passenger__c.Bus_Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>