force-app/main/default/objects/Bus_Booking__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>