force-app/main/default/objects/Bus_Booking__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <label>Primary Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>