force-app/main/default/objects/Bus_Booking__c/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <label>Primary Contact Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>