force-app/main/default/objects/Bus_Booking__c/fields/Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Seat_Count__c</fullName>
    <label>Seat Count</label>
    <summaryForeignKey>Bus_Seat__c.Bus_Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>