force-app/main/default/objects/Bus_Booking__c/validationRules/Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>Total Amount must be greater than or equal to 0.</errorMessage>
</ValidationRule>